# unitares-discord-bridge

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
docs/plans/: 2026-02-23-unitares-plugin-design.md  2026-02-23-unitares-plugin-plan.md
scripts/dev/: ship.sh
src/bridge/: autonomy.py  bot.py  cache.py  commands.py  config.py  dialectic.py  embeds.py  event_poller.py  extensions.py  hud.py  knowledge.py  lumen.py  mcp_client.py  polls.py  presence.py  server_setup.py  tasks.py  utils.py  ws_events.py
src/bridge/deferred/: autonomy.py  cache.py  dialectic.py  knowledge.py  polls.py  presence.py  resonance.py
tests/: test_autonomy.py  test_cache.py  test_commands.py  test_dialectic.py  test_embeds.py  test_event_poller.py  test_extensions.py  test_hud.py  test_knowledge.py  test_lumen.py  test_mcp_client.py  test_polls.py  test_presence.py  test_resonance.py  test_server_setup.py  test_ship_split.sh  test_ws_events.py
tests/deferred/: test_autonomy.py  test_dialectic.py  test_knowledge.py  test_polls.py  test_presence.py  test_resonance.py
