[project]
name = "unitares-discord-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.28.1",
    "aiosqlite>=0.20",
    "python-dotenv>=1.2.2",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
unitares-bridge = "bridge.bot:main"
